--- a/UF1_Proyecto/app/src/main/res/values/colors.xml
+++ b/UF1_Proyecto/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="green">#4CAF50</color>
     <color name="red">#A10303</color>
 
+    <color name="teal">#008080</color>
+
     <color name="salmon">#f4a460</color>
     <color name="darkBlueTransparent">#80075a8f</color> <!-- El primer byte (80) representa la opacidad -->
 
