--- a/UF1_Proyecto/app/src/main/res/layout/item_trip.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/item_trip.xml
@@ -44,6 +44,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="140dp"
+        android:maxWidth="28dp"
+        android:maxLines="1"
+        android:maxLength="2"
         android:hint="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +69,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="80dp"
+        android:maxWidth="28dp"
+        android:maxLines="1"
+        android:maxLength="2"
         android:hint="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +94,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:maxWidth="48dp"
+        android:maxLines="1"
+        android:maxLength="4"
         android:hint="2023"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,6 +120,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
         android:hint="25"
+        android:maxWidth="28dp"
+        android:maxLines="1"
+        android:maxLength="2"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,6 +145,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="195dp"
         android:layout_marginTop="10dp"
+        android:maxWidth="28dp"
+        android:maxLines="1"
+        android:maxLength="2"
         android:hint="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,6 +170,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="270dp"
         android:layout_marginTop="10dp"
+        android:maxWidth="48dp"
+        android:maxLines="1"
+        android:maxLength="4"
         android:hint="2023"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -247,6 +265,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="40dp"
+        android:maxLength="27"
         android:hint="Hotel Scala"
         android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -335,6 +354,7 @@
         android:layout_marginEnd="40dp"
         android:hint="@string/notesEditText"
         android:maxLines="3"
+        android:maxLength="81"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/notesTxt" />
