--- a/UF1_Proyecto/app/src/main/res/layout/item_trip.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/item_trip.xml
@@ -28,6 +28,7 @@
         tools:text="Trip to Santiago de Compostela" />
 
     <TextView
+        android:id="@+id/fromText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
