--- a/UF1_Proyecto/app/src/main/res/layout/fragment_calendar.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_calendar.xml
@@ -35,7 +35,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="As mellores cidades para visitar nesta época son:"
+        android:text="@string/bestCities"
         android:fontFamily="sans-serif-black"
         android:paddingBottom="10dp"
         android:textSize="15dp"
