--- a/UF1_Proyecto/app/src/main/res/layout/fragment_info.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_info.xml
@@ -4,19 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/textInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="20dp"
+        android:textColor="@color/white"
         android:background="@drawable/rounded_background"
-        android:text="Aplicación feita para a materia de Programación Multimedia e de Dispositvos Móbildes"
+        android:text="@string/infoText"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:textSize="20sp"
+        android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,10 +28,13 @@
         android:id="@+id/profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/textInfo" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
