--- a/UF1_Proyecto/app/src/main/res/layout/fragment_trip.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_trip.xml
@@ -9,7 +9,12 @@
     <TextView
         android:id="@+id/noTrips"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
+        android:layout_marginHorizontal="10dp"
+        android:textSize="40sp"
+        android:textColor="@color/darkBlue"
+        android:textAlignment="center"
+        android:gravity="center"
         android:text="@string/noTrips"
         android:padding="10dp"
         />
