--- a/UF1_Proyecto/app/src/main/res/layout/fragment_selected_city.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_selected_city.xml
@@ -10,6 +10,7 @@ Santiago de Compostela como exemplo
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkBlueTransparent"
     tools:context=".MainActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@ Santiago de Compostela como exemplo
             app:title="Santiago de Compostela"
             app:expandedTitleTextColor="@color/white"
             app:collapsedTitleTextColor="@color/white"
+            app:contentScrim="@color/darkBlueTransparent"
             >
             <ImageView
                 android:id="@+id/placeImage"
@@ -90,7 +92,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -103,7 +105,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -115,7 +117,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -128,7 +130,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -140,7 +142,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -153,7 +155,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -176,7 +178,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -189,7 +191,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -202,7 +204,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -214,7 +216,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -226,7 +228,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -238,7 +240,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -260,7 +262,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -273,7 +275,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -285,7 +287,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -297,7 +299,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
