--- a/UF1_Proyecto/app/src/main/res/values/colors.xml
+++ b/UF1_Proyecto/app/src/main/res/values/colors.xml
@@ -11,7 +11,8 @@
 
     <color name="teal">#008080</color>
 
-    <color name="salmon">#f4a460</color>
+    <color name="salmon">#ffd5b1</color>
+    <color name="salmonTransparent">#98ffd5b1</color>
     <color name="darkBlueTransparent">#80075a8f</color> <!-- El primer byte (80) representa la opacidad -->
 
 </resources>
