--- a/UF1_Proyecto/app/src/main/res/color/bottom_navigation_bg.xml
+++ b/UF1_Proyecto/app/src/main/res/color/bottom_navigation_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:color="@color/mainOrange"/>
-    <item android:color="@color/salmon"/>
+    <item android:state_checked="false" android:color="@color/salmon"/>
+    <item android:color="@color/white"/>
 </selector>
