--- a/UF1_Proyecto/app/src/main/res/layout/item_best.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/item_best.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center_horizontal|center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/rounded_background"
+        android:background="@color/white"
         android:fontFamily="sans-serif-light"
         android:textAlignment="center"
         android:textColor="@color/darkBlue"
