--- a/UF1_Proyecto/app/src/main/res/layout/fragment_selected_country.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_selected_country.xml
@@ -92,7 +92,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -105,7 +105,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -117,7 +117,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -130,7 +130,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -142,7 +142,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -155,7 +155,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -178,7 +178,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -191,7 +191,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -204,7 +204,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -216,7 +216,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -228,7 +228,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -240,7 +240,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -262,7 +262,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -275,7 +275,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -287,7 +287,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
@@ -299,7 +299,7 @@ Santiago de Compostela como exemplo
                 android:layout_height="match_parent"
                 android:textSize="13sp"
                 android:layout_margin="5dp"
-                android:background="@color/lightBlue"
+                android:background="@color/white"
                 android:textColor="@color/darkBlue"
                 android:padding="5dp"
                 android:textAlignment="center"
